bitmaps put into 1 c file, and makefile updated

--- a/Stage 2/skeleton/MAKEFILE
+++ b/Stage 2/skeleton/MAKEFILE
@@ -1,5 +1,5 @@
-tst_rast: tst_rast.o raster.o rast_asm.o player.o
-	cc68x -g tst_rast.o raster.o rast_asm.o player.o -o tst_rast
+tst_rast: tst_rast.o raster.o rast_asm.o bitmaps.o
+	cc68x -g tst_rast.o raster.o rast_asm.o bitmaps.o -o tst_rast
 
 tst_rast.o: tst_rast.c raster.h
 	cc68x -g -c tst_rast.c
@@ -10,5 +10,5 @@ raster.o: raster.c raster.h
 rast_asm.o: rast_asm.s
 	gen -D -L2 rast_asm.s
 
-player.o: player.c
-	cc68x -g -c player.c
+bitmaps.o: bitmaps.c
+	cc68x -g -c bitmaps.c
