Added plot char

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     },
     "files.associations": {
         "RASTER.C": "cpp",
-        "TST_RAST.C": "cpp"
+        "TST_RAST.C": "cpp",
+        "PLOT_CH.C": "cpp"
     }
 }
