working on stage 3 and 4
Co-authored-by: tai-shis <tai-shis@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "files.associations": {
         "RASTER.C": "cpp",
         "TST_RAST.C": "cpp",
-        "PLOT_CH.C": "cpp"
+        "PLOT_CH.C": "cpp",
+        "render.h": "c",
+        "TST_REND.C": "cpp"
     }
 }
