--- a/Stage 3/MAKEFILE
+++ b/Stage 3/MAKEFILE
@@ -1,9 +1,12 @@
-tst_s3: tst_s3.o model.o
-	cc68x -g tst_s3.o model.o -o tst_s3
+tst_s3: tst_s3.o model.o events.o
+	cc68x -g tst_s3.o model.o events.o -o tst_s3
 
-tst_s3.o: tst_s3.c model.h
+tst_s3.o: tst_s3.c model.h events.h
 	cc68x -g -c tst_s3.c
 
 model.o: model.c model.h
 	cc68x -g -c model.c
+
+events.o: events.c events.h
+	cc68x -g -c events.c
 	
