--- a/Stage 5/MAKEFILE
+++ b/Stage 5/MAKEFILE
@@ -1,14 +1,14 @@
-game: game.o 
-	cc68x -g game.o  -o game
+game: game.o events.o raster.o render.o
+	cc68x -g game.o -o game
 
-game.o: game.c events.o raster.o render.o
+game.o: game.c game.h model.h render.h raster.h input.h events.h types.h
 	cc68x -g game.c
 
-events.o: events.c
+events.o: events.c events.h
 	cc68x -g events.c
 
-raster.o: raster.c	
+raster.o: raster.c raster.h
 	cc68x -g raster.c
 
-render.o: render.c
+render.o: render.c render.h
 	cc68x -g render.c
