Compiling, edited makefile, and added asm qk clear to game loop

--- a/Main/MAKEFILE
+++ b/Main/MAKEFILE
@@ -1,52 +1,57 @@
 # Make for stage 2 of the project
-tst_rast: tst_rast.o raster.o rast_asm.o bitmaps.o
-	cc68x -g tst_rast.o raster.o rast_asm.o bitmaps.o -o tst_rast.prg
+#tst_rast: tst_rast.o raster.o rast_asm.o bitmaps.o
+#	cc68x -g tst_rast.o raster.o rast_asm.o bitmaps.o -o tst_rast.prg
 
-tst_rast.o: tst_rast.c raster.h
-	cc68x -g -c tst_rast.c
+#tst_rast.o: tst_rast.c raster.h
+#	cc68x -g -c tst_rast.c
 
-rast_asm.o: rast_asm.s
-	gen -D -L2 rast_asm.s
-
-bitmaps.o: bitmaps.c
-	cc68x -g -c bitmaps.c
+#rast_asm.o: rast_asm.s
+#	gen -D -L2 rast_asm.s
 
 # Make for stage 3 of the project
-tst_s3: tst_s3.o model.o events.o
-	cc68x -g tst_s3.o model.o events.o -o tst_s3.prg
+#tst_s3: tst_s3.o model.o events.o
+#	cc68x -g tst_s3.o model.o events.o -o tst_s3.prg
 
-tst_s3.o: tst_s3.c model.h events.h
-	cc68x -g -c tst_s3.c
+#tst_s3.o: tst_s3.c model.h events.h
+#	cc68x -g -c tst_s3.c
+
+# Make for stage 4 of the project
+#tst_s4: tst_s4.o render.o raster.o
+#	cc68x -g tst_s4.o render.o raster.o -o tst_s4.prg
+#
+#tst_s4.o: tst_s4.c model.h render.h
+#	cc68x -g -c tst_s4.c
+
+# Make for stage 5 of the project
+
+game: game.o events.o render.o raster.o model.o input.o clear_qk.o
+	cc68x -g game.o events.o render.o raster.o model.o input.o clear_qk.o  -o game.prg
+
+game.o: game.c game.h 
+	cc68x -g -c game.c 
+
+render.o: render.c render.h
+	cc68x -g -c render.c
+
+raster.o: raster.c raster.h
+	cc68x -g -c raster.c
+
+events.o: events.c events.h
+	cc68x -g -c events.c
+
+input.o: input.c input.h
+	cc68x -g -c input.c
 
 model.o: model.c model.h
 	cc68x -g -c model.c
 
-# Make for stage 4 of the project
-tst_s4: tst_s4.o render.o raster.o
-	cc68x -g tst_s4.o render.o raster.o -o tst_s4.prg
+bitmaps.o: bitmaps.c
+	cc68x -g -c bitmaps.c
 
-tst_s4.o: tst_s4.c model.h render.h
-	cc68x -g -c tst_s4.c
+clear_qk.o: clear_qk.s
+	gen -D -L2 clear_qk.s
 
-# Make for stage 5 of the project
-game: game.o events.o raster.o render.o
-	cc68x -g game.o -o game.prg
-
-game.o: game.c game.h model.h render.h raster.h input.h events.h types.h
-	cc68x -g game.c
-
-# render.o for all stages
-render.o: render.c render.h raster.h
-	cc68x -g render.c
-
-# raster.o for all stages
-raster.o: raster.c raster.h
-	cc68x -g -c raster.c
-
-# events.o for all stages
-events.o: events.c events.h
-	cc68x -g -c events.c
-
-# Make clean
 clean:
-	$(RM) *.o *.prg
+	$(RM) *.o *.prg 
+
+	
