Implemented PSG and Music header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "render.h": "c",
         "TST_REND.C": "cpp",
         "events.h": "c",
-        "model.h": "c"
+        "model.h": "c",
+        "psg.h": "c"
     }
 }
