attempting to optimize game. no real changes/additions.
Co-authored-by: tai-shis <tai-shis@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "TST_REND.C": "cpp",
         "events.h": "c",
         "model.h": "c",
-        "psg.h": "c"
+        "psg.h": "c",
+        "music.h": "c",
+        "game.h": "c"
     }
 }
