Finished Stage 7 with test drivers
Co-authored-by: hpunia <hpunia@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "model.h": "c",
         "psg.h": "c",
         "music.h": "c",
-        "game.h": "c"
+        "game.h": "c",
+        "effects.h": "c",
+        "stdio.h": "c"
     }
 }
