--- a/Main/MAKEFILE
+++ b/Main/MAKEFILE
@@ -23,11 +23,11 @@
 #	cc68x -g -c tst_s4.c
 
 # Make for game
-game: game.o events.o render.o raster.o model.o input.o clear_qk.o psg.o music.o
-	cc68x -g game.o events.o render.o raster.o model.o input.o clear_qk.o psg.o music.o -o game.prg
+game: spaceInvaders.o events.o render.o raster.o model.o input.o clear_qk.o psg.o music.o
+	cc68x -g game.o events.o render.o raster.o model.o input.o clear_qk.o psg.o music.o -o spaceInvaders.prg
 
-game.o: game.c game.h 
-	cc68x -g -c game.c 
+spaceInvaders.o: spaceInvaders.c spaceInvaders.h 
+	cc68x -g -c spaceInvaders.c 
 
 render.o: render.c render.h
 	cc68x -g -c render.c
