--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "music.h": "c",
         "game.h": "c",
         "effects.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "space.h": "c"
     }
 }
