--- a/Stage 2/MAKEFILE
+++ b/Stage 2/MAKEFILE
@@ -1,7 +1,7 @@
-tst_rast: tst_rast.o raster.o rast_asm.o bitmaps.o
-	cc68x -g tst_rast.o raster.o rast_asm.o bitmaps.o -o tst_rast
+tst_rast: tst_rast.o raster.o rast_asm.o
+	cc68x -g tst_rast.o raster.o rast_asm.o -o tst_rast.prg
 
-tst_rast.o: tst_rast.c raster.h
+tst_rast.o: tst_rast.c
 	cc68x -g -c tst_rast.c
 
 raster.o: raster.c raster.h
@@ -10,5 +10,5 @@ raster.o: raster.c raster.h
 rast_asm.o: rast_asm.s
 	gen -D -L2 rast_asm.s
 
-bitmaps.o: bitmaps.c
-	cc68x -g -c bitmaps.c
+clean:
+	$(RM) *.o *.prg
