--- a/Stage 4/MAKEFILE
+++ b/Stage 4/MAKEFILE
@@ -1,5 +1,5 @@
 tst_s4: tst_s4.o render.o raster.o
-	cc68x -g tst_s4.o render.o raster.o -o tst_s4
+	cc68x -g tst_s4.o render.o raster.o -o tst_s4.prg
 
 tst_s4.o: tst_s4.c model.h render.h
 	cc68x -g -c tst_s4.c
@@ -9,3 +9,7 @@ raster.o: raster.c raster.h
 
 render.o: render.c render.h
 	cc68x -g -c render.c
+
+clean:
+	$(RM) *.o *.prg
+	
