--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "game.h": "c",
         "effects.h": "c",
         "stdio.h": "c",
-        "space.h": "c"
+        "space.h": "c",
+        "raster.h": "c",
+        "space.c": "cpp"
     }
 }
