--- a/Main/MAKEFILE
+++ b/Main/MAKEFILE
@@ -23,8 +23,8 @@
 #	cc68x -g -c tst_s4.c
 
 # Make for game
-space: space.o events.o render.o raster.o model.o input.o psg.o music.o effects.o clear_qk.o
-	cc68x -g space.o events.o render.o raster.o model.o input.o psg.o music.o effects.o clear_qk.o -o space.prg
+space: space.o events.o render.o raster.o model.o input.o psg.o music.o effects.o clear_qk.o isr.o isr_asm.o
+	cc68x -g space.o events.o render.o raster.o model.o input.o psg.o music.o effects.o clear_qk.o isr.o isr_asm.o -o space.prg
 
 space.o: space.c space.h 
 	cc68x -g -c space.c 
@@ -58,6 +58,12 @@ music.o: music.c music.h
 
 effects.o: effects.c effects.h
 	cc68x -g -c effects.c
+
+isr_asm.o: isr_asm.s
+	gen -D -L2 isr_asm.s
+
+isr.o: isr.c isr.h
+	cc68x -g -c isr.c
 
 clean:
 	$(RM) *.o *.prg 
